--- a/interview_questions/面试题详解.md
+++ b/interview_questions/面试题详解.md
@@ -5,7 +5,7 @@
 
 ### 📌 目录
 [Map 的底层实现、并发安全性及扩容机制是什么？](#Map-的底层实现并发安全性及扩容机制是什么)  
-[Go语言中的进程、线程、协程的区别](#Go语言中的进程、线程、协程的区别)
+[Go语言中的进程、线程、协程的区别](#Go语言中的进程线程协程的区别)
 
 <br>
 
