--- a/interview_questions/面试题详解/面试题详解.md
+++ b/interview_questions/面试题详解/面试题详解.md
@@ -7,4 +7,5 @@
 [Map 的底层实现、并发安全性及扩容机制是什么？](https://github.com/0voice/awesome_golang_learning/blob/main/interview_questions/%E9%9D%A2%E8%AF%95%E9%A2%98%E8%AF%A6%E8%A7%A3/Map%20%E7%9A%84%E5%BA%95%E5%B1%82%E5%AE%9E%E7%8E%B0%E3%80%81%E5%B9%B6%E5%8F%91%E5%AE%89%E5%85%A8%E6%80%A7%E5%8F%8A%E6%89%A9%E5%AE%B9%E6%9C%BA%E5%88%B6%E6%98%AF%E4%BB%80%E4%B9%88%EF%BC%9F.md)  
 [Go语言中的进程、线程、协程的区别](https://github.com/0voice/awesome_golang_learning/blob/main/interview_questions/%E9%9D%A2%E8%AF%95%E9%A2%98%E8%AF%A6%E8%A7%A3/Go%E8%AF%AD%E8%A8%80%E4%B8%AD%E7%9A%84%E8%BF%9B%E7%A8%8B%E3%80%81%E7%BA%BF%E7%A8%8B%E3%80%81%E5%8D%8F%E7%A8%8B%E7%9A%84%E5%8C%BA%E5%88%AB.md)  
 [Go 开发中字符串拼接方式的性能对比与选择]()  
+[Go 语言 GMP 调度模型](https://github.com/0voice/awesome_golang_learning/blob/main/interview_questions/%E9%9D%A2%E8%AF%95%E9%A2%98%E8%AF%A6%E8%A7%A3/Go%20%E8%AF%AD%E8%A8%80%20GMP%20%E8%B0%83%E5%BA%A6%E6%A8%A1%E5%9E%8B.md)
 
